--- a/src/app/modules/shared/method-payment/components/payment-table/payment-table.component.html
+++ b/src/app/modules/shared/method-payment/components/payment-table/payment-table.component.html
@@ -46,7 +46,7 @@
         <td class="py-2 pl-2">
           <div class="flex justify-center gap-2">
             <svg-icon
-              (click)="deleteItem(i)"
+              (click)="deleteItem(item, i)"
               src="assets/icons/heroicons/outline/trash.svg"
               [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
             </svg-icon>
