--- a/src/app/modules/shared/method-payment/components/payment-table/payment-table.component.html
+++ b/src/app/modules/shared/method-payment/components/payment-table/payment-table.component.html
@@ -63,4 +63,9 @@
 </div>
 
 <!-- edit payment -->
-<app-payment-edit [isOpen]="isOpen" [payment]="payment" (eventClose)="closeEdit()" (eventSave)="editPayment($event)" />
+<app-payment-edit
+  [total]="total"
+  [isOpen]="isOpen"
+  [payment]="payment"
+  (eventClose)="closeEdit()"
+  (eventSave)="editPayment($event)" />
