--- a/src/app/modules/shared/tupa/components/tupa-payment-tab/tupa-payment-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-payment-tab/tupa-payment-tab.component.html
@@ -57,90 +57,97 @@
     <app-payment-data-table [data]="services" [total]="total" (eventDelete)="onDelete($event)" />
   </div>
 
-  <!-- level 5 -->
-  <h6 class="mb-6 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
-    Pago a nombre de otro usuario
-  </h6>
+  <!-- comprobante de pago -->
+  <div *ngIf="services.length > 0">
+    <!-- level 5 -->
+    <h6 class="mb-6 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+      Pago a nombre de otro usuario
+    </h6>
 
-  <!-- level 6 -->
-  <div class="mb-6 grid gap-6 md:grid-cols-3">
-    <div>
-      <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-        Tipo Documento <b class="text-red-600">*</b></label
-      >
-      <input
-        type="text"
-        readonly
-        [value]="person?.documentType?.name || ''"
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm uppercase text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+    <!-- level 6 -->
+    <div class="mb-6 grid gap-6 md:grid-cols-3">
+      <div>
+        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+          Tipo Documento <b class="text-red-600">*</b></label
+        >
+        <input
+          type="text"
+          readonly
+          [value]="person?.documentType?.name || ''"
+          class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm uppercase text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+      </div>
+      <div>
+        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+          >N° Documento <b class="text-red-600">*</b></label
+        >
+        <input
+          type="text"
+          readonly
+          [value]="person?.documentNumber"
+          class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+      </div>
+      <div class="justify-end">
+        <button
+          (click)="openPerson()"
+          class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0">
+          Buscar
+        </button>
+      </div>
     </div>
-    <div>
-      <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
-        >N° Documento <b class="text-red-600">*</b></label
-      >
-      <input
-        type="text"
-        readonly
-        [value]="person?.documentNumber"
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+    <!-- level 2 -->
+    <div class="mb-6 grid gap-6 md:grid-cols-2">
+      <div class="cols-span-2">
+        <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+          >Razón social/Nombre <b class="text-red-600">*</b></label
+        >
+        <input
+          type="text"
+          readonly
+          [value]="person?.nombreRazonSocial"
+          class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
+      </div>
     </div>
-    <div class="justify-end">
+    <!-- level 3 -->
+    <div class="mb-6 grid gap-6 md:grid-cols-2">
+      <div>
+        <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+          >Dirección Legal <b class="text-red-600">*</b></label
+        >
+        <textarea
+          [value]="person?.address"
+          readonly
+          class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
+        </textarea>
+      </div>
+    </div>
+
+    <!-- datos de pago -->
+    <h6
+      class="relative mb-6 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+      Datos del Pago
+      <button (click)="openPayment()" class="absolute right-0 top-0 text-primary">
+        <u>Agregar pago</u>
+      </button>
+    </h6>
+
+    <div class="mt-10">
+      <app-payment-table [total]="total" [data]="payments" (eventDelete)="deletePaymen($event)" />
+    </div>
+
+    <div class="mb-5 mt-5 text-right" *ngIf="canSave">
       <button
-        (click)="openPerson()"
+        (click)="onSave()"
         class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0">
-        Buscar
+        Guardar Expediente
       </button>
     </div>
   </div>
-  <!-- level 2 -->
-  <div class="mb-6 grid gap-6 md:grid-cols-2">
-    <div class="cols-span-2">
-      <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
-        >Razón social/Nombre <b class="text-red-600">*</b></label
-      >
-      <input
-        type="text"
-        readonly
-        [value]="person?.nombreRazonSocial"
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
-    </div>
-  </div>
-  <!-- level 3 -->
-  <div class="mb-6 grid gap-6 md:grid-cols-2">
-    <div>
-      <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
-        >Dirección Legal <b class="text-red-600">*</b></label
-      >
-      <textarea
-        [value]="person?.address"
-        readonly
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
-      </textarea>
-    </div>
-  </div>
-
-  <!-- datos de pago -->
-  <h6
-    class="relative mb-6 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
-    Datos del Pago
-    <button (click)="openPayment()" class="absolute right-0 top-0 text-primary">
-      <u>Agregar pago</u>
-    </button>
-  </h6>
-
-  <div class="mt-10">
-    <app-payment-table [data]="payments" (eventDelete)="deletePaymen($event)" />
-  </div>
-
-  <div class="mb-5 mt-5 text-right" *ngIf="canSave">
-    <button
-      (click)="onSave()"
-      class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0">
-      Guardar Expediente
-    </button>
-  </div>
 </div>
 
-<app-payment-create [isOpen]="isOpenPayment" (eventClose)="closePayment()" (eventSave)="addPayment($event)" />
+<app-payment-create
+  [total]="total"
+  [isOpen]="isOpenPayment"
+  (eventClose)="closePayment()"
+  (eventSave)="addPayment($event)" />
 
 <app-person-search [isOpen]="isOpenPerson" (eventClose)="closePerson()" (eventSelect)="onPerson($event)" />
