--- a/src/app/modules/shared/method-payment/components/payment-create/payment-create.component.html
+++ b/src/app/modules/shared/method-payment/components/payment-create/payment-create.component.html
@@ -69,6 +69,7 @@
 
     <div class="text-right">
       <button
+        [disabled]="!createForm.valid"
         type="submit"
         class="rounded-lg bg-primary px-5 py-3 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4">
         Guardar
