add info tupa-05

--- a/src/app/modules/dev-03/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
@@ -19,4 +19,5 @@
     [person]="personPayment"
     [payments]="payments"
     (eventPerson)="selectPersonPayment($event)" />
+  <app-tupa-expediente-tab />
 </div>
