--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -35,6 +35,7 @@
     (eventPerson)="selectPersonPayment($event)"
     (eventSave)="onSave()"
     (eventValidate)="onValidatePayment($event)" />
+  <app-tupa-expediente-tab *ngIf="this.currentTabKey === tabs[5].id" [expediente]="expediente" />
 </div>
 <!-- loading -->
 <app-content-loading *ngIf="service.getLoading()" />
