--- a/src/app/modules/dashboard/pages/tupa-05-page/components/tupa-05-page-create/tupa-05-page-create.component.html
+++ b/src/app/modules/dashboard/pages/tupa-05-page/components/tupa-05-page-create/tupa-05-page-create.component.html
@@ -1,4 +1,3 @@
-<div class="mx-auto px-4 py-4 sm:px-8 lg:container">
-  <app-dashboard-header title="REGISTRO DE SOLICITUD CA-05"/>
-  <app-tupa-05-tab-container />
+<div class="mx-auto px-4 py-4 lg:container sm:px-8">
+  <app-tupa-05-tab-container title="REGISTRO DE SOLICITUD CA-05" />
 </div>
