--- a/src/app/modules/dev-03/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
@@ -1,6 +1,6 @@
 <app-tupa-header-tab [tabs]="this.tabs" (eventSelected)="this.onSelect($event)" />
 <div class="w-full rounded-lg bg-background p-6">
-  <app-tupa-request-tab
+  <!-- <app-tupa-request-tab
     *ngIf="this.currentTabKey === tabs[0].id"
     [person]="person"
     [representante]="representante"
@@ -14,10 +14,10 @@
     (eventTechnical)="selectTechnical($event)" />
   <app-tupa-04-recinto *ngIf="this.currentTabKey === tabs[2].id" [recinto]="recinto" />
   <app-tupa-04-info-animal *ngIf="this.currentTabKey === tabs[3].id" [cuarentenas]="cuarentenas" />
-  <app-tupa-payment-tab
+   <app-tupa-payment-tab
     *ngIf="this.currentTabKey === tabs[4].id"
     [person]="personPayment"
     [payments]="payments"
-    (eventPerson)="selectPersonPayment($event)" />
+    (eventPerson)="selectPersonPayment($event)" /> -->
   <app-tupa-expediente-tab />
 </div>
