--- a/src/app/modules/shared/method-payment/components/payment-service-table/payment-service-table.component.html
+++ b/src/app/modules/shared/method-payment/components/payment-service-table/payment-service-table.component.html
@@ -11,26 +11,26 @@
     </thead>
     <!--Table body-->
     <tbody>
-      <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of data">
+      <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let payload of data; index as row">
         <td class="py-2 pr-2">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.serviceName }}
+            {{ payload.serviceName }}
           </span>
         </td>
         <td class="py-2 pl-2 text-right">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.amount }}
+            {{ payload.amount }}
           </span>
         </td>
         <td class="py-2 pl-2 text-right">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.price }}
+            {{ payload.price }}
           </span>
         </td>
         <td class="py-2 pl-2">
           <div class="flex justify-center gap-2">
             <svg-icon
-              (click)="onDelete(item)"
+              (click)="onDelete({ row, payload })"
               src="assets/icons/heroicons/outline/trash.svg"
               [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
             </svg-icon>
@@ -39,7 +39,7 @@
       </tr>
     </tbody>
     <tfoot>
-      <tr class="border-b border-dashed border-border hover:bg-card">
+      <tr class="border-b border-dashed border-border">
         <td class="py-2 pr-2" colspan="2">
           <span class="text-sm font-semibold text-muted-foreground">Total</span>
         </td>
