--- a/src/app/modules/shared/tupa/components/tupa-request-tab/tupa-request-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-request-tab/tupa-request-tab.component.html
@@ -138,7 +138,7 @@
     <app-person-representante-select
       [personId]="person.id"
       [value]="representante?.id"
-      (eventData)="onSelectRepresentante($event)" />
+      (eventData)="requestService.setRepresentante($event)" />
   </div>
 </div>
 
