--- a/src/app/shared/components/content-loading/content-loading.component.html
+++ b/src/app/shared/components/content-loading/content-loading.component.html
@@ -1,6 +1,6 @@
 <div class="fixed left-0 top-0 h-full w-full">
   <div class="flex h-full items-center justify-center bg-slate-100/10">
-    <div class="flex flex-col items-center rounded-sm bg-white p-5 pb-2 pt-2">
+    <div class="flex flex-col items-center rounded-sm bg-white p-5 pb-2 pt-2 shadow-md">
       <app-loading />
       Guardando...
     </div>
