add update tupa

--- a/src/app/modules/shared/tupa/components/tupa-expediente-tab/tupa-expediente-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-expediente-tab/tupa-expediente-tab.component.html
@@ -24,7 +24,7 @@
           <span class="text-sm">Oficina (Sede):</span>
         </td>
         <td class="py-2 pl-2 text-left" colspan="3">
-          <span class="text-sm font-semibold">{{ expediente?.sedeName }}</span>
+          <span class="text-sm font-semibold uppercase">{{ expediente?.sedeName }}</span>
         </td>
       </tr>
       <tr class="border-b border-dashed border-border">
@@ -40,7 +40,7 @@
           <span class="text-sm">Proceso:</span>
         </td>
         <td class="py-2 pl-2 text-left" colspan="3">
-          <span class="text-sm font-semibold">{{ expediente?.procedureName }}</span>
+          <span class="text-sm font-semibold uppercase">{{ expediente?.procedureName }}</span>
         </td>
       </tr>
       <tr class="border-b border-dashed border-border">
@@ -48,7 +48,7 @@
           <span class="text-sm">Servicio TUPA:</span>
         </td>
         <td class="py-2 pl-2 text-left" colspan="3">
-          <span class="text-sm font-semibold">{{ expediente?.serviceName }}</span>
+          <span class="text-sm font-semibold uppercase">{{ expediente?.serviceName }}</span>
         </td>
       </tr>
       <tr class="border-b border-dashed border-border">
@@ -56,7 +56,7 @@
           <span class="text-sm">Usuario:</span>
         </td>
         <td class="py-2 pl-2 text-left" colspan="3">
-          <span class="text-sm font-semibold">{{ expediente?.personName }}</span>
+          <span class="text-sm font-semibold uppercase">{{ expediente?.personName }}</span>
         </td>
       </tr>
     </tbody>
