--- a/src/app/modules/shared/tupa/components/tupa-process-tab/tupa-process-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-process-tab/tupa-process-tab.component.html
@@ -12,10 +12,10 @@
       (click)="eventSave.emit()"
       [className]="
         canAction
-          ? 'flex-none rounded-md bg-primary px-4 py-2.5 text-xs font-semibold text-primary-foreground'
+          ? 'flex-none rounded-md bg-transparent px-4 py-2.5 text-xs font-semibold text-primary border-primary border-2 hover:bg-primary hover:text-white'
           : 'flex-none rounded-md bg-muted px-4 py-2.5 text-xs font-semibold text-muted-foreground'
       ">
-      Guardar
+      {{ status === 'FINISHED' ? 'Actualizar TUPA' : 'Guardar' }}
     </button>
     <button
       *ngIf="status === 'FINISHED'"
