--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -18,4 +18,5 @@
   <app-tupa-expediente-tab *ngIf="processService.isActiveCurrentTab(5)" [expediente]="expediente" />
 </div>
 <!-- loading -->
-<app-content-loading *ngIf="expedienteCreate.getLoading() || expedienteFind.getLoading()" />
+<app-content-loading
+  *ngIf="expedienteCreate.getLoading() || expedienteFind.getLoading() || expedienteEdit.getLoading()" />
