--- a/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -18,14 +18,16 @@
         <img class="rounded-md" src="https://avatars.githubusercontent.com/u/12519008?v=4" alt="" />
       </div>
       <div class="overflow-hidden px-2 text-sm font-semibold text-foreground">
-        Luciano Oliveira
-        <p class="truncate text-ellipsis text-xs font-semibold text-muted-foreground">me&#64;lanno.dev</p>
+        {{ profileService.getData()?.idUser }}
+        <p class="truncate text-ellipsis text-xs font-semibold text-muted-foreground">
+          {{ profileService.getData()?.descSedeSed }}
+        </p>
       </div>
     </div>
 
     <div class="border-b border-dashed border-border"></div>
 
-    <ul class="my-2 mx-4 flex flex-col">
+    <ul class="mx-4 my-2 flex flex-col">
       @for (item of profileMenu; track $index) {
       <li
         routerLink="{{ item.link }}"
