--- a/src/app/modules/shared/tupa/components/tupa-process-tab/tupa-process-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-process-tab/tupa-process-tab.component.html
@@ -29,13 +29,8 @@
       Finalizar Proceso
     </button>
     <button
-      [disabled]="!canAction"
       (click)="onCancel()"
-      [className]="
-        canAction
-          ? 'flex-none rounded-md bg-red-700 px-4 py-2.5 text-xs font-semibold text-primary-foreground'
-          : 'flex-none rounded-md bg-muted px-4 py-2.5 text-xs font-semibold text-muted-foreground'
-      ">
+      class="flex-none rounded-md bg-red-700 px-4 py-2.5 text-xs font-semibold text-primary-foreground">
       Cancelar Proceso
     </button>
   </div>
