--- a/src/app/modules/dashboard/pages/tupa-05-page/tupa-05-page.component.html
+++ b/src/app/modules/dashboard/pages/tupa-05-page/tupa-05-page.component.html
@@ -1,3 +1,6 @@
 <div class="mx-auto px-4 py-4 lg:container sm:px-8">
-  <app-tupa-05-tab-container title="REGISTRO DE SOLICITUD CA-05" />
+  <app-tupa-05-tab-container
+    title="REGISTRO DE SOLICITUD CA-05"
+    (eventCancel)="onCancel($event)"
+    (eventFinished)="onFinished($event)" />
 </div>
