--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -8,14 +8,16 @@
   (eventCancel)="onCancel()" />
 <app-tupa-header-tab [tabs]="processService.getTabs()" (eventSelected)="processService.selectTab($event)" />
 <div class="w-full rounded-lg bg-background p-6">
-  <app-tupa-request-tab *ngIf="processService.isActiveCurrentTab(0)" [requestService]="requestService" />
+  <app-tupa-request-tab *ngIf="processService.isActiveCurrentTab('PARTE_I')" [requestService]="requestService" />
   <app-tupa-establishment-tab
-    *ngIf="processService.isActiveCurrentTab(1)"
+    *ngIf="processService.isActiveCurrentTab('PARTE_II')"
     [establishmentService]="establishmentService" />
-  <app-tupa-05-final *ngIf="processService.isActiveCurrentTab(2)" [detailService]="detailService" />
-  <app-tupa-05-mercancia-pecuaria *ngIf="processService.isActiveCurrentTab(3)" [productService]="productService" />
-  <app-tupa-payment-tab *ngIf="processService.isActiveCurrentTab(4)" [paymentService]="paymentService" />
-  <app-tupa-expediente-tab *ngIf="processService.isActiveCurrentTab(5)" [expediente]="expediente" />
+  <app-tupa-05-final *ngIf="processService.isActiveCurrentTab('PARTE_III')" [detailService]="detailService" />
+  <app-tupa-05-mercancia-pecuaria
+    *ngIf="processService.isActiveCurrentTab('PARTE_IV')"
+    [productService]="productService" />
+  <app-tupa-payment-tab *ngIf="processService.isActiveCurrentTab('PARTE_V')" [paymentService]="paymentService" />
+  <app-tupa-expediente-tab *ngIf="processService.isActiveCurrentTab('PARTE_VI')" [expediente]="expediente" />
 </div>
 <!-- loading -->
 <app-content-loading
